testsuite/tests/deriving/should_fail/T14728b.stderr

T14728b.hs:16:1: error:
    • Can't make a derived instance of ‘C (Identity a)’
        (even with cunning GeneralizedNewtypeDeriving):
        the associated type ‘U’ contains the last type variable
          of the class ‘C’ in a kind, which is not (yet) allowed
    • In the stand-alone deriving instance for ‘C (Identity a)’
